[project]
name = "mcp-gateway"
version = "0.1.0"
description = "Tagentacle MCP Server Gateway Node — stdio-to-HTTP adapter, remote server directory, and unified /mcp/directory publisher"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tagentacle-py-core>=0.1.0",
    "mcp>=1.8",
    "anyio>=4.0",
    "uvicorn>=0.20",
    "starlette",
]

[tool.uv.sources]
tagentacle-py-core = { path = "../python-sdk-core", editable = true }
